--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,10 +1,45 @@
-<p>login works!</p>
+<div class="container">
+  <div class="row">
+    <div class="d-flex justify-content-center align-items-center col-5 mx-auto vh-100">
+      <div class="card flex-row my-5 border-0 shadow rounded overflow-hidden w-100">
+        <div class="card-img-left">
+          <!-- Background image for card set in CSS! -->
+        </div>
+        <div class="card-body p-5">
+          <h1 class="card-title text-center mb-5">Log in</h1>
+          <form>
 
-<p>
-    <mat-form-field appearance="outline">
-      <mat-label>Outline form field</mat-label>
-      <input matInput placeholder="Placeholder">
-      <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-      <mat-hint>Hint</mat-hint>
-    </mat-form-field>
-  </p>
+            <div class="mb-3">
+              <input type="text" class="form-control" placeholder="Username" required autofocus>
+            </div>
+
+            <div class="mb-3">
+              <input type="password" class="form-control" placeholder="Password">
+            </div>
+
+            <div class="mb-3">
+              <button class="btn-primary text-uppercase form-control" type="submit">Login</button>
+            </div>
+
+            <a class="d-block text-center mt-2 medium" >Don't have an account? Sign Up</a>
+
+            <hr class="my-4">
+
+            <div class="d-grid mb-2">
+              <button class="btn-google text-uppercase form-control" type="submit">
+                <fa-icon [icon]="faGoogle"></fa-icon> Sign in with Google
+              </button>
+            </div>
+
+            <div class="d-grid">
+              <button class="btn-facebook text-uppercase form-control" type="submit">
+                <fa-icon [icon]="faFacebook"></fa-icon> Sign in with Facebook
+              </button>
+            </div>
+
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
