edit login route

--- a/src/app/modules/login/login.component.scss
+++ b/src/app/modules/login/login.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/fonts/styles.scss";
+@import "../../../styles/fonts.scss";
 
 .container {
     background: rgb(206, 218, 41);
