--- a/src/app/modules/trainee/language-list/language-list.component.html
+++ b/src/app/modules/trainee/language-list/language-list.component.html
@@ -5,11 +5,11 @@
             <div class="row my-3">
                 <button class="btn btn-outline-info ">
                     <div class="row">
-                        <div class="col-md-3 my-auto px-4">
-                            <img class="col-md-12 javaband" src="assets/picture/java.svg" alt="Java">
+                        <div class="col-md-3 my-auto my-auto px-4">
+                            <img class="col-md-12 javaband" src="assets/picture/java.svg" alt="Java" height="120px">
                         </div>
-                        <div class="col-md-9 text-left py-1">
-                            <h1 style="font-weight: bold;">Pick Java for play the Game</h1>
+                        <div class="col-md-9 text-left my-auto py-1">
+                            <h1 class="mb-1" style="font-weight: bold;">Pick Java for play the Game</h1>
                             <p class="text-dark">
                                 Java is a programming language and computing platform first released
                                 by Sun Microsystems in 1995. There are lots of applications and websites
@@ -28,10 +28,10 @@
                 <button class="btn btn-outline-info ">
                     <div class="row">
                         <div class="col-md-3 my-auto px-4">
-                            <img class="goband col-md-12" src="assets/picture/go.png" alt="Go">
+                            <img class="goband col-md-12" src="assets/picture/go.png" alt="Go" height="120px">
                         </div>
-                        <div class="col-md-9 text-left py-1">
-                            <h1 style="font-weight: bold;">Pick Go for play the Game</h1>
+                        <div class="col-md-9 text-left my-auto py-1">
+                            <h1 class="mb-1" style="font-weight: bold;">Pick Go for play the Game</h1>
                             <p class="text-dark">
                                 Go is a statically typed, compiled programming language designed at Google by Robert
                                 Griesemer,
@@ -51,10 +51,10 @@
                 <button class="btn btn-outline-info ">
                     <div class="row">
                         <div class="col-md-3 my-auto px-4">
-                            <img class="col-md-12 kotlinband justify-content-center" src="assets/picture/kotlin.png" alt="Kotlin">
+                            <img class="col-md-12 kotlinband" src="assets/picture/kotlin.png" alt="Kotlin" height="120px">
                         </div>
-                        <div class="col-md-9 text-left py-1">
-                            <h1 style="font-weight: bold;">Pick Kotlin for play the Game</h1>
+                        <div class="col-md-9 text-left my-auto py-1">
+                            <h1 class="mb-1" style="font-weight: bold;">Pick Kotlin for play the Game</h1>
                             <p class="text-dark">
                                 Kotlin is a cross-platform, statically typed, general-purpose programming language with type inference. 
                                 Kotlin is designed to interoperate fully with Java, and the JVM version of Kotlin's standard library 
