--- a/src/app/modules/login/login.component.scss
+++ b/src/app/modules/login/login.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/fonts.scss";
+@import '../../../styles/fonts.scss';
 
 .container {
   background: rgb(206, 218, 41);
@@ -9,7 +9,7 @@
 .card-img-left {
   width: 45%;
   /* Link to your background image using in the property below! */
-  background: scroll center url("../.././ref/picture/sk8.jpg");
+  background: scroll center url('../.././ref/picture/sk8.jpg');
   background-size: cover;
 }
 
