--- a/src/app/modules/trainee/language-list/language-list.component.html
+++ b/src/app/modules/trainee/language-list/language-list.component.html
@@ -1,71 +1,91 @@
 <div class="container">
-    <div class="row justify-content-center vh-100 align-items-center">
-        <div class="col-md-8">
-            <!-- Java -->
-            <div class="row my-3">
-                <button class="btn btn-outline-info ">
-                    <div class="row">
-                        <div class="col-md-3 my-auto my-auto px-4">
-                            <img class="col-md-12 javaband" src="assets/picture/java.svg" alt="Java" height="120px">
-                        </div>
-                        <div class="col-md-9 text-left my-auto py-1">
-                            <h1 class="mb-1" style="font-weight: bold;">Pick Java for play the Game</h1>
-                            <p class="text-dark">
-                                Java is a programming language and computing platform first released
-                                by Sun Microsystems in 1995. There are lots of applications and websites
-                                that will not work unless you have Java installed, and more are created every day.
-                                Java is fast, secure, and reliable. From laptops to
-                                ... <span class="text-white">read more</span>
-                            </p>
-
-                        </div>
-                    </div>
-                </button>
+  <div class="row justify-content-center vh-100 align-items-center">
+    <div class="col-md-8">
+      <!-- Java -->
+      <div class="row my-3">
+        <button class="btn btn-outline-info">
+          <div class="row">
+            <div class="col-md-3 my-auto my-auto px-4">
+              <img
+                class="col-md-12 javaband"
+                src="assets/picture/java.svg"
+                alt="Java"
+                height="120px"
+              />
             </div>
-
-            <!-- Go -->
-            <div class="row my-3">
-                <button class="btn btn-outline-info ">
-                    <div class="row">
-                        <div class="col-md-3 my-auto px-4">
-                            <img class="goband col-md-12" src="assets/picture/go.png" alt="Go" height="120px">
-                        </div>
-                        <div class="col-md-9 text-left my-auto py-1">
-                            <h1 class="mb-1" style="font-weight: bold;">Pick Go for play the Game</h1>
-                            <p class="text-dark">
-                                Go is a statically typed, compiled programming language designed at Google by Robert
-                                Griesemer,
-                                Rob Pike, and Ken Thompson. Go is syntactically similar to C, but with memory safety,
-                                garbage collection,
-                                structural typing, and CSP-style concurrency
-                                ... <span class="text-white">read more</span>
-                            </p>
-
-                        </div>
-                    </div>
-                </button>
+            <div class="col-md-9 text-left my-auto py-1">
+              <h1 class="mb-1" style="font-weight: bold">
+                Pick Java for play the Game
+              </h1>
+              <p class="text-dark">
+                Java is a programming language and computing platform first
+                released by Sun Microsystems in 1995. There are lots of
+                applications and websites that will not work unless you have
+                Java installed, and more are created every day. Java is fast,
+                secure, and reliable. From laptops to ...
+                <span class="text-white">read more</span>
+              </p>
             </div>
+          </div>
+        </button>
+      </div>
 
-            <!-- Kotlin -->
-            <div class="row my-3">
-                <button class="btn btn-outline-info ">
-                    <div class="row">
-                        <div class="col-md-3 my-auto px-4">
-                            <img class="col-md-12 kotlinband" src="assets/picture/kotlin.png" alt="Kotlin" height="120px">
-                        </div>
-                        <div class="col-md-9 text-left my-auto py-1">
-                            <h1 class="mb-1" style="font-weight: bold;">Pick Kotlin for play the Game</h1>
-                            <p class="text-dark">
-                                Kotlin is a cross-platform, statically typed, general-purpose programming language with type inference. 
-                                Kotlin is designed to interoperate fully with Java, and the JVM version of Kotlin's standard library 
-                                depends on the Java Class Library, but type inference allows its syntax to be more
-                                ... <span class="text-white">read more</span>
-                            </p>
-
-                        </div>
-                    </div>
-                </button>
+      <!-- Go -->
+      <div class="row my-3">
+        <button class="btn btn-outline-info">
+          <div class="row">
+            <div class="col-md-3 my-auto px-4">
+              <img
+                class="goband col-md-12"
+                src="assets/picture/go.png"
+                alt="Go"
+                height="120px"
+              />
             </div>
-        </div>
+            <div class="col-md-9 text-left my-auto py-1">
+              <h1 class="mb-1" style="font-weight: bold">
+                Pick Go for play the Game
+              </h1>
+              <p class="text-dark">
+                Go is a statically typed, compiled programming language designed
+                at Google by Robert Griesemer, Rob Pike, and Ken Thompson. Go is
+                syntactically similar to C, but with memory safety, garbage
+                collection, structural typing, and CSP-style concurrency ...
+                <span class="text-white">read more</span>
+              </p>
+            </div>
+          </div>
+        </button>
+      </div>
+
+      <!-- Kotlin -->
+      <div class="row my-3">
+        <button class="btn btn-outline-info">
+          <div class="row">
+            <div class="col-md-3 my-auto px-4">
+              <img
+                class="col-md-12 kotlinband"
+                src="assets/picture/kotlin.png"
+                alt="Kotlin"
+                height="120px"
+              />
+            </div>
+            <div class="col-md-9 text-left my-auto py-1">
+              <h1 class="mb-1" style="font-weight: bold">
+                Pick Kotlin for play the Game
+              </h1>
+              <p class="text-dark">
+                Kotlin is a cross-platform, statically typed, general-purpose
+                programming language with type inference. Kotlin is designed to
+                interoperate fully with Java, and the JVM version of Kotlin's
+                standard library depends on the Java Class Library, but type
+                inference allows its syntax to be more ...
+                <span class="text-white">read more</span>
+              </p>
+            </div>
+          </div>
+        </button>
+      </div>
     </div>
+  </div>
 </div>
