--- a/src/app/modules/login/register/register.component.html
+++ b/src/app/modules/login/register/register.component.html
@@ -1,1 +1,230 @@
-<p>register works!</p>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+			
+      <div class="row my-5 justify-content-center">
+        <div class="col-md-4 rounded" style="background: white">
+          <div class="card-body px-5">
+
+            <h1 class="card-title text-center my-4">Register</h1>
+            <form class="align-items-center justify-content-center">
+              <div class="mb-3 row justify-content-center">
+                <input
+                  type="text"
+                  class="form-control col-md-8"
+                  placeholder="Firstname"
+                  required
+                  autofocus
+                />
+              </div>
+
+              <div class="mb-3 row justify-content-center">
+                <input
+                  type="text"
+                  class="form-control col-md-8"
+                  placeholder="Lastname"
+                  required
+                />
+              </div>
+
+              <div class="mb-3 row justify-content-center">
+                <input
+                  type="text"
+                  class="form-control col-md-8"
+                  placeholder="Email"
+                  required
+                  autofocus
+                />
+              </div>
+
+              <div class="mb-3 row justify-content-center">
+                <input
+                  type="text"
+                  class="form-control col-md-8"
+                  placeholder="Mobile"
+                  required
+                />
+              </div>
+
+              <div class="my-4 row justify-content-center">
+                <button
+                  class="btn-primary text-uppercase form-control col-md-8"
+                  type="submit"
+                >
+                  Register
+                </button>
+              </div>
+            </form>
+
+            <hr class="my-3" />
+            <div class="row my justify-content-center">
+              <a class="d-block text-center my-0 medium" routerLink="/login">
+                Have an account? Log in Here
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Table Component -->
+      <div class="row my-5 justify-content-center">
+				<div class="col-md-10">
+					<app-table [dataSource]="mockData"></app-table>
+				</div>
+			</div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="container">
+  <div class="row">
+    <div
+      class="
+        d-flex
+        justify-content-center
+        align-items-center
+        col-3
+        mx-auto
+        vh-100
+      "
+    >
+      <div
+        class="card flex-row my-5 border-0 shadow rounded overflow-hidden w-100"
+      >
+        <div class="card-body p-5">
+          <h1 class="card-title text-center mb-5">Register</h1>
+          <form class="align-items-center justify-content-center">
+            <div class="mb-3 row justify-content-center">
+              <input
+                type="text"
+                class="form-control col-md-8"
+                placeholder="Firstname"
+                required
+                autofocus
+              />
+            </div>
+
+            <div class="mb-3 row justify-content-center">
+              <input
+                type="text"
+                class="form-control col-md-8"
+                placeholder="Lastname"
+                required
+              />
+            </div>
+
+            <div class="mb-3 row justify-content-center">
+              <input
+                type="text"
+                class="form-control col-md-8"
+                placeholder="Email"
+                required
+                autofocus
+              />
+            </div>
+
+            <div class="mb-3 row justify-content-center">
+              <input
+                type="text"
+                class="form-control col-md-8"
+                placeholder="Mobile"
+                required
+              />
+            </div>
+
+            <div class="mt-4 row justify-content-center">
+              <button
+                class="btn-primary text-uppercase form-control col-md-8"
+                type="submit"
+              >
+                Register
+              </button>
+            </div>
+          </form>
+
+          <hr class="my-3" />
+          <div class="row justify-content-center">
+            <a class="d-block text-center my-0 medium" routerLink="/login">
+              Have an account? Log in Here
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+	<div class="row">
+    <div
+      class="
+        d-flex
+        justify-content-center
+        align-items-center
+        col-3
+        mx-auto
+        vh-100
+      "
+    >
+      <div
+        class="card flex-row my-5 border-0 shadow rounded overflow-hidden w-100"
+      >
+        <div class="card-body p-5">
+          <h1 class="card-title text-center mb-5">Register</h1>
+          <form class="align-items-center justify-content-center">
+            <div class="mb-3 row justify-content-center">
+              <input
+                type="text"
+                class="form-control col-md-8"
+                placeholder="Firstname"
+                required
+                autofocus
+              />
+            </div>
+
+            <div class="mb-3 row justify-content-center">
+              <input
+                type="text"
+                class="form-control col-md-8"
+                placeholder="Lastname"
+                required
+              />
+            </div>
+
+            <div class="mb-3 row justify-content-center">
+              <input
+                type="text"
+                class="form-control col-md-8"
+                placeholder="Email"
+                required
+                autofocus
+              />
+            </div>
+
+            <div class="mb-3 row justify-content-center">
+              <input
+                type="text"
+                class="form-control col-md-8"
+                placeholder="Mobile"
+                required
+              />
+            </div>
+
+            <div class="mt-4 row justify-content-center">
+              <button
+                class="btn-primary text-uppercase form-control col-md-8"
+                type="submit"
+              >
+                Register
+              </button>
+            </div>
+          </form>
+
+          <hr class="my-3" />
+          <div class="row justify-content-center">
+            <a class="d-block text-center my-0 medium" routerLink="/register">
+              Have an account? Log in Here
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
