--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -11,44 +11,77 @@
 <app-table ></app-table> -->
 
 <div class="container">
-   <div class="row">
-      <div class="d-flex justify-content-center align-items-center col-5 mx-auto vh-100">
-         <div class="card flex-row my-5 border-0 shadow rounded overflow-hidden w-100">
-            <div class="card-img-left">
+  <div class="row">
+    <div
+      class="
+        d-flex
+        justify-content-center
+        align-items-center
+        col-5
+        mx-auto
+        vh-100
+      "
+    >
+      <div
+        class="card flex-row my-5 border-0 shadow rounded overflow-hidden w-100"
+      >
+        <div class="card-img-left"></div>
+        <div class="card-body p-5">
+          <h1 class="card-title text-center mb-5">Login</h1>
+          <form>
+            <div class="mb-3">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Username"
+                required
+                autofocus
+              />
             </div>
-            <div class="card-body p-5">
-               <h1 class="card-title text-center mb-5">Login</h1>
-               <form>
-                  <div class="mb-3">
-                     <input type="text" class="form-control" placeholder="Username" required autofocus>
-                  </div>
 
-                  <div class="mb-3">
-                     <input type="password" class="form-control" placeholder="Password">
-                  </div>
-
-                  <div class="mb-3">
-                     <button class="btn-primary text-uppercase form-control" type="submit">Login</button>
-                  </div>
-
-                  <a class="d-block text-center mt-2 medium" routerLink="/register">Don't have an account? Sign Up</a>
-
-                  <hr class="my-4">
-               </form>
-
-               <div class="d-grid mb-2">
-                     <button class="btn btn-google text-uppercase form-control" type="button">
-                        <fa-icon [icon]="faGoogle"></fa-icon> Sign in with Google
-                     </button>
-                  </div>
-
-                  <div class="d-grid">
-                     <button class="btn btn-facebook text-uppercase form-control" type="button">
-                        <fa-icon [icon]="faFacebook"></fa-icon> Sign in with Facebook
-                     </button>
-                  </div>
+            <div class="mb-3">
+              <input
+                type="password"
+                class="form-control"
+                placeholder="Password"
+              />
             </div>
-         </div>
+
+            <div class="mb-3">
+              <button
+                class="btn-primary text-uppercase form-control"
+                type="submit"
+              >
+                Login
+              </button>
+            </div>
+
+            <a class="d-block text-center mt-2 medium" routerLink="/register"
+              >Don't have an account? Sign Up</a
+            >
+
+            <hr class="my-4" />
+          </form>
+
+          <div class="d-grid mb-2">
+            <button
+              class="btn btn-google text-uppercase form-control"
+              type="button"
+            >
+              <fa-icon [icon]="faGoogle"></fa-icon> Sign in with Google
+            </button>
+          </div>
+
+          <div class="d-grid">
+            <button
+              class="btn btn-facebook text-uppercase form-control"
+              type="button"
+            >
+              <fa-icon [icon]="faFacebook"></fa-icon> Sign in with Facebook
+            </button>
+          </div>
+        </div>
       </div>
-   </div>
+    </div>
+  </div>
 </div>
