--- a/src/app/modules/login/component/table/table.component.html
+++ b/src/app/modules/login/component/table/table.component.html
@@ -1,31 +1,54 @@
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
+  <table
+    mat-table
+    [dataSource]="dataSource"
+    class="mat-elevation-z8 register--table"
+  >
     <!-- Firstname Column -->
     <ng-container matColumnDef="firstname">
-      <th mat-header-cell *matHeaderCellDef> firstname </th>
-      <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
+      <th mat-header-cell *matHeaderCellDef>firstname</th>
+      <td mat-cell *matCellDef="let element">{{ element.firstname }}</td>
     </ng-container>
 
     <!-- Lastname Column -->
     <ng-container matColumnDef="lastname">
-      <th mat-header-cell *matHeaderCellDef> lastname </th>
-      <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
+      <th mat-header-cell *matHeaderCellDef>lastname</th>
+      <td mat-cell *matCellDef="let element">{{ element.lastname }}</td>
     </ng-container>
 
     <!-- Email Column -->
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> email </th>
-      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+      <th mat-header-cell *matHeaderCellDef>email</th>
+      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
     </ng-container>
 
     <!-- Mobile Column -->
     <ng-container matColumnDef="mobile">
-      <th mat-header-cell *matHeaderCellDef> mobile </th>
-      <td mat-cell *matCellDef="let element"> {{element.mobile}} </td>
+      <th mat-header-cell *matHeaderCellDef>mobile</th>
+      <td mat-cell *matCellDef="let element">{{ element.mobile }}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>name</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+
+    <!-- Avatar Column -->
+    <ng-container matColumnDef="avatar">
+      <th mat-header-cell *matHeaderCellDef>avatar</th>
+      <td mat-cell *matCellDef="let element">
+        <div class="row align-items-center">
+          <div><img [src]="element.avatar" alt="a" /></div>
+          <div>
+            <fa-icon id="fa__edit" [icon]="faEdit" (click)="editRecord(element)"></fa-icon>
+          </div>
+        </div>
+        <!-- <img [src]="element.avatar" alt="a"> -->
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 </div>
